slurm-scripts/yaml_logs/.ipynb_checkpoints/mem_yaml_array_44467274_29-checkpoint.err
  File "/om2/user/bjmedina/auditory-memory/memory/src/model/main_v2.py", line 129
    save_figs = (
                ^
SyntaxError: '(' was never closed
